--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,6 +11,7 @@ AllCops:
     - 'tmp/**/*'
     - 'Gemfile'
     - 'vendor/**/*'
+    - 'gemfiles/**/*'
   DisplayCopNames: true
 
 Standard/SemanticBlocks:
