--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ rvm:
 notifications:
   email: false
 
+before_install:
+  - gem update --system
+  - gem install bundler
+
 matrix:
   fast_finish: true
   include:
