--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ matrix:
   include:
     - rvm: ruby-head
       gemfile: gemfiles/railsmaster.gemfile
+    - rvm: 2.6.1
+      gemfile: gemfiles/rails6.gemfile
     - rvm: 2.6.0
       gemfile: gemfiles/rails52.gemfile
     - rvm: 2.5.1
