--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ notifications:
   email: false
 
 before_install:
-  - gem update --system
-  - gem install bundler
+  - gem uninstall -v '>= 2' -i $(rvm gemdir)@global -ax bundler || true
+  - gem install bundler -v '< 2'
 
 matrix:
   fast_finish: true
