Standardize gem development

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,5 @@
 require:
   - standard/cop/semantic_blocks
-  - rubocop-rspec
 
 inherit_gem:
   standard: config/base.yml
@@ -12,55 +11,20 @@ AllCops:
     - 'Gemfile'
     - 'vendor/**/*'
     - 'gemfiles/**/*'
+    - 'lib/.rbnext/**/*'
+    - 'lib/generators/**/templates/*.rb'
+    - '.github/**/*'
   DisplayCopNames: true
+  TargetRubyVersion: 2.5
 
 Standard/SemanticBlocks:
   Enabled: false
+
+Style/FrozenStringLiteralComment:
+  Enabled: true
 
 Style/TrailingCommaInArrayLiteral:
   EnforcedStyleForMultiline: no_comma
 
 Style/TrailingCommaInHashLiteral:
   EnforcedStyleForMultiline: no_comma
-
-Style/SignalException:
-  Enabled: true
-
-Style/FrozenStringLiteralComment:
-  Enabled: true
-
-RSpec/Focus:
-  Enabled: true
-
-RSpec/EmptyExampleGroup:
-  Enabled: true
-
-RSpec/EmptyLineAfterExampleGroup:
-  Enabled: true
-
-RSpec/EmptyLineAfterFinalLet:
-  Enabled: true
-
-RSpec/EmptyLineAfterHook:
-  Enabled: true
-
-RSpec/EmptyLineAfterSubject:
-  Enabled: true
-
-RSpec/HooksBeforeExamples:
-  Enabled: true
-
-RSpec/ImplicitExpect:
-  Enabled: true
-
-RSpec/IteratedExpectation:
-  Enabled: true
-
-RSpec/LetBeforeExamples:
-  Enabled: true
-
-RSpec/MissingExampleGroupArgument:
-  Enabled: true
-
-RSpec/ReceiveCounts:
-  Enabled: true
