--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -16,8 +16,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ["3.2"]
-        gemfile: ["gemfiles/rails7.gemfile"]
+        ruby: ["3.4"]
+        gemfile: ["gemfiles/rails8.gemfile"]
         rbs: ["true"]
         include:
         - ruby: "2.7"
@@ -25,6 +25,9 @@ jobs:
           rbs: "false"
         - ruby: "3.0"
           gemfile: "gemfiles/rails70.gemfile"
+          rbs: "false"
+        - ruby: "3.3"
+          gemfile: "gemfiles/rails7.gemfile"
           rbs: "false"
         - ruby: "3.2"
           gemfile: "gemfiles/railsmaster.gemfile"
